# solana-workshop

./: .gitignore  README.md
anchor-hello-world/: Anchor.toml  rust-toolchain.toml
anchor-hello-world/programs/anchor-hello-world/: Cargo.toml
anchor-hello-world/programs/anchor-hello-world/src/: lib.rs
anchor-hello-world/tests/: anchor-hello-world.ts
anchor-note/: Anchor.toml
anchor-note/tests/: anchor-note.ts
answer/: alt.md  anchor-framework-guide.md  anchor-note-pda-tutorial.md  anchor-note-practice-tutorial.md  anchor-token-metadata-client.md  anchor-token-metadata-tutorial.md  cpi.md  memo-client.md  memo.md  sysvar-pro.md  sysvar.md  token-metadata.md
answer/alt-optimized-demo/: OPTIMIZATION_ANALYSIS.md  README.md
articles/: solana_mev_attacks_comprehensive_analysis.md
greeting_counter/: Cargo.toml  Makefile
greeting_counter/client/: client.ts  package-lock.json  package.json  tsconfig.json
greeting_counter/src/: lib.rs
greeting_counter_structured/: Cargo.toml  Makefile
greeting_counter_structured/client/: client.ts
greeting_counter_structured/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
solana-alt/: BORSH_IMPLEMENTATION.md  Cargo.toml  Makefile  README.md  TUTORIAL.md
solana-alt/client/: alt-utils.ts  main.ts  package-lock.json  package.json  (+1 more)
solana-cpi-invoke/: Cargo.toml  Makefile  tx.json
solana-memo-contract/: Cargo.toml  Makefile
solana-memo-contract/client/: .env  index.ts  memo.ts  package-lock.json  package.json  utils.ts
solana-memo-contract/client/commands/: create.ts  delete.ts  read.ts  update.ts
solana-memo-contract/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
solana-pda/: Cargo.toml
solana-pda-vault/: Cargo.toml  Makefile
solana-sysvar/: Cargo.toml  Makefile
solana-token-metadata/: Cargo.toml  Makefile
solana-token-metadata/client/: main.ts  package-lock.json  package.json
solana-token-metadata/src/: instruction.rs  lib.rs  processor.rs  state.rs
solana_hello_world/: Cargo.toml  Makefile
(+22 files in other folders)
