[package]
name = "solana-memo-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "=1.18.5"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0.69"
num-derive = "0.4" # for #[derive(FromPrimitive)]
num-traits = "0.2" # FromPrimitive trait crate

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

